discount button z-index fix

--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -124,7 +124,7 @@
       line-height: 90px;
       padding: 0 45px;
       letter-spacing: .045em;
-      z-index: 3;
+      z-index: 5;
     }
     
     @include screen('tablet-small') {
